--- a/rush00/rush00/Assembly-CSharp.csproj
+++ b/rush00/rush00/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BulletGo.cs" />
      <Compile Include="Assets\Scripts\GunManager.cs" />
      <Compile Include="Assets\Scripts\GunPickUp.cs" />
      <Compile Include="Assets\Scripts\PlayerAudioController.cs" />
